[gd_scene load_steps=6 format=2]

[ext_resource path="res://entities/player/submarine_interior.gd" type="Script" id=1]
[ext_resource path="res://assets/enemies/submarine_interior.fbx" type="PackedScene" id=2]
[ext_resource path="res://shaders/indicator.tres" type="Shader" id=3]

[sub_resource type="ShaderMaterial" id=4]
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 3 )
shader_param/color = Color( 1, 1, 1, 1 )

[node name="submarine_interior" instance=ExtResource( 2 )]
transform = Transform( 0.5, 0, 0, 0, 0.5, 0, 0, 0, 0.5, 0.000337087, 0.000147909, 0.354926 )
script = ExtResource( 1 )
blue = Color( 0.164706, 0.615686, 0.980392, 1 )
green = Color( 0.227451, 0.698039, 0.0352941, 1 )
red = Color( 0.913725, 0.0470588, 0.0470588, 1 )
yellow = Color( 0.917647, 0.843137, 0.0156863, 1 )

[node name="indicator_right2" parent="." index="1"]
transform = Transform( 10.7813, 0, 0, 0, 5.78361, 9.09865, 0, -9.09865, 5.78361, 0.496834, -0.507118, -1.85907 )
material/1 = SubResource( 4 )

[node name="indicator_left2" parent="." index="3"]
transform = Transform( 10.7813, 0, 0, 0, 5.78361, 9.09865, 0, -9.09865, 5.78361, -0.499679, -0.504592, -1.86048 )
material/1 = SubResource( 3 )

[node name="light_right" type="OmniLight" parent="." index="4"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0.500595, -0.372309, -1.79672 )

[node name="light_left" type="OmniLight" parent="." index="5"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, -0.501, -0.372, -1.797 )

[node name="OmniLight" type="OmniLight" parent="." index="6"]
transform = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 1.09404, 0 )
light_color = Color( 0.92549, 0.854902, 0.776471, 1 )
